[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Menus/MainMenu/button_exit.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/MainMenu/button_options.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/MainMenu/button_start.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/MainMenu/button_credits.gd" type="Script" id=4]
[ext_resource path="res://Assets/Imagens/MainMenu_logo.png" type="Texture" id=5]
[ext_resource path="res://Assets/Imagens/MainMenu.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fontes/menu_buttons.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Imagens/MainMenu_Gradient.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fontes/monogram.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Menus/MainMenu/MainMenu.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Gradient"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -560.241, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -560, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 9 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 6 )

[node name="Logo" type="Sprite" parent="Sprite"]
position = Vector2( 216, -88 )
texture = ExtResource( 5 )

[node name="Gradient" type="Sprite" parent="Sprite"]
position = Vector2( -560, 0 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Gradient"]
autoplay = "Gradient"
anims/Gradient = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="start" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 104.0
margin_top = 352.0
margin_right = 232.0
margin_bottom = 387.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "START"
flat = true
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="start"]

[node name="options" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 104.0
margin_top = 424.0
margin_right = 232.0
margin_bottom = 459.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "OPTIONS"
flat = true
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="options"]

[node name="credits" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 104.0
margin_top = 496.0
margin_right = 232.0
margin_bottom = 531.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "CREDITS"
flat = true
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="credits"]

[node name="exit" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 104.0
margin_top = 568.0
margin_right = 232.0
margin_bottom = 603.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
text = "EXIT"
flat = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="exit"]

[node name="Label" type="Label" parent="."]
margin_left = 1072.0
margin_top = 685.0
margin_right = 1312.0
margin_bottom = 716.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Â© Moon Bass 2023"

[connection signal="mouse_entered" from="start" to="start" method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="start" method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="start" method="_on_start_pressed"]
[connection signal="mouse_entered" from="options" to="options" method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="options" to="options" method="_on_options_mouse_exited"]
[connection signal="pressed" from="options" to="options" method="_on_options_pressed"]
[connection signal="mouse_entered" from="credits" to="credits" method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="credits" to="credits" method="_on_credits_mouse_exited"]
[connection signal="pressed" from="credits" to="credits" method="_on_credits_pressed"]
[connection signal="mouse_entered" from="exit" to="exit" method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit" to="exit" method="_on_exit_mouse_exited"]
[connection signal="pressed" from="exit" to="exit" method="_on_exit_pressed"]
